--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -363,6 +363,7 @@
     <Compile Include="Peripherals\GPIOPort\OpenTitan_GPIO.cs" />
     <Compile Include="Peripherals\Sound\PULP_I2S.cs" />
     <Compile Include="Peripherals\Mocks\EchoI2CDevice.cs" />
+    <Compile Include="Peripherals\I2C\PULP_uDMA_I2C.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
