[GH#148] Adding a simple way to configure a IPv4 network with DHCP
This commit adds support to configure an IPv4 network, including DHCP
under Linux.
It requires the package iproute2 (for the ip tool), dnsmasq (DHCP),
pkill, and ufw (for configuring the traffic to/from the network interface)

--- a/src/Emulator/Extensions/Extensions.csproj
+++ b/src/Emulator/Extensions/Extensions.csproj
@@ -172,6 +172,12 @@
     <Compile Include="UserInterface\Commands\LastLogCommand.cs" />
     <Compile Include="UserInterface\Commands\DisplayImageCommand.cs" />
     <Compile Include="Hooks\InterruptPythonEngine.cs" />
+    <Compile Include="TAPHelper\TapIPHelper.cs" />
+    <Compile Include="HostInterfaces\Network\LinuxHostIPv4Config.cs" />
+    <Compile Include="HostInterfaces\Network\LinuxIPv4RoutingPolicy.cs" />
+    <Compile Include="HostInterfaces\Network\ILinuxHostConfig.cs" />
+    <Compile Include="HostInterfaces\Network\LinuxHostConfigurator.cs" />
+    <Compile Include="HostInterfaces\Network\LinuxDnsmasqServer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
