[#21969] CommandLineInterface: Extract the DummyIOSource class to a separate file

--- a/src/UI/UI.csproj
+++ b/src/UI/UI.csproj
@@ -73,6 +73,7 @@
     <Compile Include="ConsoleBackendAnalyzers\TerminalAppProvider.cs" />
     <Compile Include="ConsoleBackendAnalyzers\WindowPositionProvider.cs" />
     <Compile Include="ConsoleBackendAnalyzers\ProcessBasedProvider.cs" />
+    <Compile Include="DummyIOSource.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="VideoAnalyzer\FrameBufferDisplayWidget.cs" />
