[#22400] Add a mock EchoI2CDevice model

--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -362,6 +362,7 @@
     <Compile Include="Peripherals\UART\IbexUART.cs" />
     <Compile Include="Peripherals\GPIOPort\OpenTitan_GPIO.cs" />
     <Compile Include="Peripherals\Sound\PULP_I2S.cs" />
+    <Compile Include="Peripherals\Mocks\EchoI2CDevice.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
