--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -365,6 +365,7 @@
     <Compile Include="Peripherals\Mocks\EchoI2CDevice.cs" />
     <Compile Include="Peripherals\I2C\PULP_uDMA_I2C.cs" />
     <Compile Include="Peripherals\SPI\PULP_uDMA_SPI.cs" />
+    <Compile Include="Peripherals\Mocks\DummySPISlave.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
