[#24083] Add MC3635 accelerometer

--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -236,6 +236,7 @@
     <Compile Include="Peripherals\Wireless\IEEE802_15_4\Address.cs" />
     <Compile Include="Peripherals\SPI\Quark_SPI.cs" />
     <Compile Include="Peripherals\Network\ENC28J60.cs" />
+    <Compile Include="Peripherals\Sensors\MC3635.cs" />
     <Compile Include="Peripherals\Sensors\TI_LM74.cs" />
     <Compile Include="Peripherals\GPIOPort\Quark_GPIOController.cs" />
     <Compile Include="Peripherals\GPIOPort\Quark_PWM.cs" />
