[#24083] Add minimal DWT

--- a/src/Emulator/Cores/cores-arm-m.csproj
+++ b/src/Emulator/Cores/cores-arm-m.csproj
@@ -58,6 +58,7 @@
       <DependentUpon>CortexMRegisters.tt</DependentUpon>
     </Compile>
     <Compile Include="Arm-M\NVIC.cs" />
+    <Compile Include="Arm-M\DWT.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Arm-M\CortexMRegisters.tt">
