--- a/src/Emulator/Main/Emulator.csproj
+++ b/src/Emulator/Main/Emulator.csproj
@@ -507,6 +507,7 @@
     <Compile Include="Peripherals\USB\CDC\Interface.cs" />
     <Compile Include="Peripherals\USB\CDC\FunctionalDescriptor.cs" />
     <Compile Include="Peripherals\I2C\I2CPeripheralBase.cs" />
+    <Compile Include="Peripherals\Sensor\ICPIPeripheral.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
