--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -367,6 +367,7 @@
     <Compile Include="Peripherals\SPI\PULP_uDMA_SPI.cs" />
     <Compile Include="Peripherals\Mocks\DummySPISlave.cs" />
     <Compile Include="Peripherals\SD\PULP_uDMA_SDIO.cs" />
+    <Compile Include="Peripherals\Sensors\PULP_uDMA_Camera.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
