--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -368,6 +368,7 @@
     <Compile Include="Peripherals\Mocks\DummySPISlave.cs" />
     <Compile Include="Peripherals\SD\PULP_uDMA_SDIO.cs" />
     <Compile Include="Peripherals\Sensors\PULP_uDMA_Camera.cs" />
+    <Compile Include="Peripherals\Sensors\HM01B0.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
