--- a/src/Emulator/Main/Emulator.csproj
+++ b/src/Emulator/Main/Emulator.csproj
@@ -43,6 +43,9 @@
     <Reference Include="WindowsBase" Condition=" $(CurrentPlatform) == 'Windows'" />
     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Mono.CSharp" >
+      <HintPath>..\..\..\..\..\lib\resources\libraries\mcs.dll</HintPath>
+    </Reference>
     <Reference Include="Mono.Cecil">
       <HintPath>..\..\..\..\..\lib\resources\libraries\Mono.Cecil.dll</HintPath>
     </Reference>
