--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -361,7 +361,6 @@
     <Compile Include="Peripherals\Timers\PULP_Timer.cs" />
     <Compile Include="Peripherals\UART\PULP_uDMA_UART.cs" />
     <Compile Include="Peripherals\GPIOPort\PULP_APB_GPIO.cs" />
-    <Compile Include="Peripherals\UART\IbexUART.cs" />
     <Compile Include="Peripherals\GPIOPort\OpenTitan_GPIO.cs" />
     <Compile Include="Peripherals\Sound\PULP_I2S.cs" />
     <Compile Include="Peripherals\Mocks\EchoI2CDevice.cs" />
@@ -375,6 +374,7 @@
     <Compile Include="Peripherals\Network\LiteX_Ethernet_CSR32.cs" />
     <Compile Include="Peripherals\Timers\LiteX_Timer_CSR32.cs" />
     <Compile Include="Peripherals\Miscellaneous\OpenTitan_VerilatorSwTestStatus.cs" />
+    <Compile Include="Peripherals\UART\OpenTitan_UART.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
