[#24853] PlatformLevelInterruptController: Extract parts of the logic into separate files

--- a/src/Emulator/Cores/cores-riscv.csproj
+++ b/src/Emulator/Cores/cores-riscv.csproj
@@ -61,6 +61,10 @@
     <Compile Include="RiscV\CV32E40P.cs" />
     <Compile Include="RiscV\PULP_InterruptController.cs" />
     <Compile Include="RiscV\PULP_EventController.cs" />
+    <Compile Include="RiscV\PLIC\IrqTarget.cs" />
+    <Compile Include="RiscV\PLIC\IrqSource.cs" />
+    <Compile Include="RiscV\PLIC\IPlatformLevelInterruptController.cs" />
+    <Compile Include="RiscV\PLIC\PlatformLevelInterruptControllerBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="RiscV\RiscV32Registers.tt">
