--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -315,6 +315,7 @@
     <Compile Include="Peripherals\SPI\MAX3421E.cs" />
     <Compile Include="Peripherals\GPIOPort\CC2538_GPIO.cs" />
     <Compile Include="Peripherals\Miscellaneous\LiteX_SoC_Controller.cs" />
+    <Compile Include="Peripherals\Miscellaneous\LiteX_SoC_Controller_CSR32.cs" />
     <Compile Include="Peripherals\SPI\EOSS3_SPIMaster.cs" />
     <Compile Include="Peripherals\Miscellaneous\LiteX_MMCM.cs" />
     <Compile Include="Peripherals\Analog\EOSS3_ADC.cs" />
