--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -362,7 +362,6 @@
     <Compile Include="Peripherals\Timers\PULP_Timer.cs" />
     <Compile Include="Peripherals\UART\PULP_uDMA_UART.cs" />
     <Compile Include="Peripherals\GPIOPort\PULP_APB_GPIO.cs" />
-    <Compile Include="Peripherals\UART\IbexUART.cs" />
     <Compile Include="Peripherals\GPIOPort\OpenTitan_GPIO.cs" />
     <Compile Include="Peripherals\Sound\PULP_I2S.cs" />
     <Compile Include="Peripherals\Mocks\EchoI2CDevice.cs" />
@@ -378,6 +377,7 @@
     <Compile Include="Peripherals\Miscellaneous\OpenTitan_VerilatorSwTestStatus.cs" />
     <Compile Include="Peripherals\Miscellaneous\OpenTitan_PowerManager.cs" />
     <Compile Include="Peripherals\GPIOPort\IMXRT_GPIO.cs" />
+    <Compile Include="Peripherals\UART\OpenTitan_UART.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
