[#24853] PlatformLevelInterruptController: Use contexts instead of targets

--- a/src/Emulator/Cores/cores-riscv.csproj
+++ b/src/Emulator/Cores/cores-riscv.csproj
@@ -61,7 +61,7 @@
     <Compile Include="RiscV\PULP_InterruptController.cs" />
     <Compile Include="RiscV\PULP_EventController.cs" />
     <Compile Include="RiscV\PLIC\IPlatformLevelInterruptController.cs" />
-    <Compile Include="RiscV\PLIC\IrqTarget.cs" />
+    <Compile Include="RiscV\PLIC\IrqContext.cs" />
     <Compile Include="RiscV\PLIC\IrqSource.cs" />
     <Compile Include="RiscV\PLIC\PlatformLevelInterruptControllerBase.cs" />
   </ItemGroup>
