[#25336] Add IDMA interface

--- a/src/Emulator/Main/Emulator.csproj
+++ b/src/Emulator/Main/Emulator.csproj
@@ -241,6 +241,7 @@
     <Compile Include="Utilities\ConvertibleAttribute.cs" />
     <Compile Include="Peripherals\DMA\Request.cs" />
     <Compile Include="Peripherals\DMA\TransferType.cs" />
+    <Compile Include="Peripherals\DMA\IDMA.cs" />
     <Compile Include="Peripherals\Bus\Silencer.cs" />
     <Compile Include="Time\IClockSource.cs" />
     <Compile Include="Time\WorkMode.cs" />
