OpenTitan PLIC: Add PLIC to support OpenTitan.
Change-Id: Ic8b24a16f13ab4c689e1f87f6ebe79e7fa7ed88c

--- a/src/Emulator/Cores/cores-riscv.csproj
+++ b/src/Emulator/Cores/cores-riscv.csproj
@@ -60,6 +60,7 @@
     <Compile Include="RiscV\CV32E40P.cs" />
     <Compile Include="RiscV\PULP_InterruptController.cs" />
     <Compile Include="RiscV\PULP_EventController.cs" />
+    <Compile Include="RiscV\OpenTitan_PlatformLevelInterruptController.cs" />
     <Compile Include="RiscV\PLIC\IPlatformLevelInterruptController.cs" />
     <Compile Include="RiscV\PLIC\IrqContext.cs" />
     <Compile Include="RiscV\PLIC\IrqSource.cs" />
