[#25675] Add HostCamera device

--- a/src/Emulator/Extensions/Extensions.csproj
+++ b/src/Emulator/Extensions/Extensions.csproj
@@ -43,6 +43,9 @@
     <Reference Include="Dynamitey">
       <HintPath>..\..\..\..\..\lib\resources\libraries\Dynamitey.dll</HintPath>
     </Reference>
+    <Reference Include="BitMiracle.LibJpeg.NET.dll">
+      <HintPath>..\..\..\..\..\lib\resources\libraries\BitMiracle.LibJpeg.NET.dll</HintPath>
+    </Reference>
     <Reference Include="System.Drawing" />
   </ItemGroup>
   <ItemGroup>
@@ -173,6 +176,7 @@
     <Compile Include="UserInterface\Commands\DisplayImageCommand.cs" />
     <Compile Include="Hooks\InterruptPythonEngine.cs" />
     <Compile Include="UserInterface\InlineImage.cs" />
+    <Compile Include="HostInterfaces\Camera\HostCamera.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
