--- a/src/Emulator/Cores/cores-riscv.csproj
+++ b/src/Emulator/Cores/cores-riscv.csproj
@@ -65,6 +65,7 @@
     <Compile Include="RiscV\PLIC\IrqContext.cs" />
     <Compile Include="RiscV\PLIC\IrqSource.cs" />
     <Compile Include="RiscV\PLIC\PlatformLevelInterruptControllerBase.cs" />
+    <Compile Include="RiscV\NonstandardCSR.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="RiscV\RiscV32Registers.tt">
