[#26912] Add i.MX RT LP SPI controller

--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -388,6 +388,7 @@
     <Compile Include="Peripherals\Timers\OpenTitan_Timer.cs" />
     <Compile Include="Peripherals\MTD\OpenTitan_FlashController.cs" />
     <Compile Include="Peripherals\SPI\IMXRT_FlexSPI.cs" />
+    <Compile Include="Peripherals\SPI\IMXRT_LPSPI.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
