--- a/src/Emulator/Main/Emulator.csproj
+++ b/src/Emulator/Main/Emulator.csproj
@@ -156,6 +156,7 @@
     <Compile Include="Peripherals\IHasOwnLife.cs" />
     <Compile Include="Core\Range.cs" />
     <Compile Include="Peripherals\UART\IUART.cs" />
+    <Compile Include="Peripherals\CFU\ICFU.cs" />
     <Compile Include="Utilities\SharedLibraries.cs" />
     <Compile Include="Peripherals\Network\INetworkInterface.cs" />
     <Compile Include="Peripherals\IAbsoluteAddressAware.cs" />
