--- a/src/Emulator/Peripherals/Test/PeripheralsTests/PeripheralsTests.csproj
+++ b/src/Emulator/Peripherals/Test/PeripheralsTests/PeripheralsTests.csproj
@@ -49,6 +49,7 @@
     <Compile Include="STMCANTest.cs" />
     <Compile Include="GailserUARTTests.cs" />
     <Compile Include="LPC43xx_GPIO_Test.cs" />
+    <Compile Include="OpenTitan_AES_Test.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
