--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -387,6 +387,7 @@
     <Compile Include="Peripherals\Miscellaneous\OpenTitan_PowerManager.cs" />
     <Compile Include="Peripherals\Miscellaneous\OpenTitan_HMAC.cs" />
     <Compile Include="Peripherals\Miscellaneous\OpenTitan_AES.cs" />
+    <Compile Include="Peripherals\Miscellaneous\OpenTitan_KeyManager.cs" />
     <Compile Include="Peripherals\GPIOPort\IMXRT_GPIO.cs" />
     <Compile Include="Peripherals\UART\OpenTitan_UART.cs" />
     <Compile Include="Peripherals\Timers\OpenTitan_Timer.cs" />
