[#29086] OpenTitan_KeyManager: Add tests
Co-authored-by: Wojciech Meller <wmeller@antmicro.com>

--- a/src/Emulator/Peripherals/Test/PeripheralsTests/PeripheralsTests.csproj
+++ b/src/Emulator/Peripherals/Test/PeripheralsTests/PeripheralsTests.csproj
@@ -50,6 +50,7 @@
     <Compile Include="GailserUARTTests.cs" />
     <Compile Include="LPC43xx_GPIO_Test.cs" />
     <Compile Include="OpenTitan_AES_Test.cs" />
+    <Compile Include="OpenTitan_KeyManagerTest.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
