--- a/src/Emulator/Cores/cores-riscv.csproj
+++ b/src/Emulator/Cores/cores-riscv.csproj
@@ -68,6 +68,7 @@
     <Compile Include="RiscV\RegisterDescription.cs" />
     <Compile Include="RiscV\NonstandardCSR.cs" />
     <Compile Include="RiscV\VectorInstructionsOpcodes.cs" />
+    <Compile Include="RiscV\RiscvOpcodesParser.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="RiscV\RiscV32Registers.tt">
