--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -451,6 +451,10 @@
       <Project>{55ABBA4C-AAF9-4726-A592-0C92436CEC92}</Project>
       <Name>PacketDotNet</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\..\..\lib\bc-csharp\crypto\crypto.Net45.csproj">
+      <Project>{45473847-8AF8-4BAF-B768-442C6875B8CF}</Project>
+      <Name>crypto</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Peripherals\Miscellaneous\SiLabs\" />
