--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -421,6 +421,7 @@
     <Compile Include="Peripherals\Video\MusteinGenericGPU.cs" />
     <Compile Include="Peripherals\UART\SAMD5_UART.cs" />
     <Compile Include="Peripherals\Miscellaneous\LiteX_MMCM_CSR32.cs" />
+    <Compile Include="Peripherals\UART\SAMD20_UART.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
