--- a/src/Emulator/Main/Emulator.csproj
+++ b/src/Emulator/Main/Emulator.csproj
@@ -533,6 +533,7 @@
     <Compile Include="Utilities\Crypto\PRINCECipher.cs" />
     <Compile Include="Utilities\Crypto\PRESENTCipher.cs" />
     <Compile Include="Utilities\Crypto\AesProvider.cs" />
+    <Compile Include="Utilities\VmemReader.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
