--- a/src/Emulator/Main/Emulator.csproj
+++ b/src/Emulator/Main/Emulator.csproj
@@ -220,6 +220,9 @@
     <Compile Include="Peripherals\UART\UARTBase.cs" />
     <Compile Include="Utilities\Binding\ExportAttribute.cs" />
     <Compile Include="Peripherals\Bus\BusMultiRegistration.cs" />
+    <Compile Include="Peripherals\Bus\IPerCoreRegistration.cs" />
+    <Compile Include="Peripherals\Bus\BusPerCorePointRegistration.cs" />
+    <Compile Include="Peripherals\Bus\BusPerCoreRangeRegistration.cs" />
     <Compile Include="Peripherals\Bus\Wrappers\BytePeripheralWrapper.cs" />
     <Compile Include="Peripherals\Bus\Wrappers\WordPeripheralWrapper.cs" />
     <Compile Include="Peripherals\Bus\Wrappers\DoubleWordPeripheralWrapper.cs" />
