--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -409,6 +409,7 @@
     <Compile Include="Peripherals\Miscellaneous\IMX_TRNG.cs" />
     <Compile Include="Peripherals\SPI\NORFlash\DecodedOperation.cs" />
     <Compile Include="Peripherals\SPI\GigaDevice_GD25LQ.cs" />
+    <Compile Include="Peripherals\Miscellaneous\STM32_PWR.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
